# TP-multiagentes

./: .env.example  .gitignore  Dockerfile  README.md  REPORT.md  docker-compose.yml  observaciones  pyproject.toml  spec.md  task.md  todo.md
demo/: DEMO.md  run_demo.sh
diagrams/: architecture.md  query-graph.md
docker/db/: Dockerfile
docs/: compliance-matrix.md
docs/diagrams/: architecture.md  architecture.mmd  query-graph.md  query-graph.mmd  schema-graph.md  schema-graph.mmd
mcp_server/: Dockerfile  server.py
mcp_server/tools/: __init__.py  schema.py  sql.py  sql_safety.py
schema_agent_front/: app.py
specs-demos-clase/: spec-back.md  spec-demo-langgraph.md  spec-ui.md  spec-weekend-planner.md
src/agents/: __init__.py  planner.py  prompts.py  query_agent.py  schema_agent.py  validator.py
src/api/: __init__.py  main.py  openai_graph.py
src/app_logging/: __init__.py  langsmith.py  logger.py
src/config/: settings.py
src/contracts/: __init__.py  openai_compat.py
src/graph/: __init__.py  checkpoints.py  edges.py  query_workflow.py  run_config.py  schema_workflow.py  state.py  workflow.py
src/llm/: __init__.py  client.py
src/memory/: __init__.py  persistent_store.py  schema_context_store.py  schema_descriptions_store.py  session_store.py  short_term.py  user_preferences.py
src/services/: schema_context_service.py
src/specs/: spec-agents.md  spec-backend-api.md  spec-docker.md  spec-langgraph-workflow.md  spec-mcp.md  spec-memory.md  spec-tests.md  spec-ui-openaiweb.md
tests/: conftest.py
ui/: README.md  verify-backend.sh
(+43 files in other folders)
